--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <div class="game">
       <canvas id="canvas"></canvas>
       <div class="mobileControls">
-        <button class="mobileControls__button" onmousedown="game.moveLeft()" ontouchstart="game.moveLeft()" onmouseup="clearInterval(game.player.moveLeftInterval" ontouchend="clearInterval(game.player.moveInterval)">Left</button>
+        <button class="mobileControls__button" onmousedown="game.moveLeft()" ontouchstart="game.moveLeft()" onmouseup="clearInterval(game.player.moveLeftInterval)" ontouchend="clearInterval(game.player.moveInterval)">Left</button>
         <button class="mobileControls__button" onmousedown="game.moveRight()" ontouchstart="game.moveRight()" onmouseup="clearInterval(game.player.moveRightInterval)" ontouchend="clearInterval(game.player.moveInterval)">Right</button>
         <button class="mobileControls__button" onmousedown="game.player.jump()" ontouchstart="game.player.jump()">Jump</button>
       </div>
       <p class="counter" id="counter">A game by Karol Swierczek | Controls: W, D / arrows and SPACE | Points: 0</p>
+      <h1 id="text_message"> Press Button C To Start Game</h1>
     </div>
     <script src="js/index.js"></script>
     <script src="js/player.js"></script>
@@ -22,6 +23,7 @@
     <script src="js/drawing.js"></script>
     <script src="js/generator.js"></script>
     <script src="js/collisionDetection.js"></script>
+    <script src="js/Obstacles.js"></script>
     <script>
       // Event listeners
       document.addEventListener("keydown", game.keydown.bind(game), false)
